tests/baselines/reference/jsFileCompilationErrorOnDeclarationsWithJsFileReferenceWithOutDir.errors.txt
b.ts(2,1): error TS18056: Declaration file contains synthesized file reference directives: '"c.d.ts"'


==== a.ts (0 errors) ====
    class c {
    }
    
==== b.ts (1 errors) ====
    /// <reference path="c.js"/>
    function foo() {
    ~~~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"c.d.ts"'
    }
    
==== c.js (0 errors) ====
    function bar() {
    }